# bandits

./: pyproject.toml
bandits/: __init__.py  agent.py  bandit.py  environment.py  policy.py
logs/: bayesian_results_0.log.json  bayesian_results_1024.log.json  bayesian_results_1152.log.json  bayesian_results_128.log.json  bayesian_results_256.log.json  bayesian_results_384.log.json  bayesian_results_512.log.json  bayesian_results_640.log.json  bayesian_results_768.log.json  bayesian_results_896.log.json  bayesian_results_mix_0.log.json  bayesian_results_mix_128.log.json  bayesian_results_mix_256.log.json  bayesian_results_mix_384.log.json  bayesian_results_mix_512.log.json  bayesian_results_shekel_0.log.json  bayesian_results_shekel_128.log.json  bayesian_results_shekel_256.log.json  bayesian_results_shekel_384.log.json  bayesian_results_shekel_512.log.json  bayesian_results_single_function_0.log.json  bayesian_results_single_function_128.log.json  bayesian_results_single_function_256.log.json  bayesian_results_single_function_384.log.json  bayesian_results_single_function_512.log.json  grid_search_results1.txt  grid_search_results_mix.txt  logs_{'num_leaves': 2, 'max_depth': 2, 'n_estimators': 1000}.log.json  logs_{'num_leaves': 2, 'max_depth': 2, 'n_estimators': 100}.log.json  logs_{'num_leaves': 2, 'max_depth': 2, 'n_estimators': 200}.log.json  logs_{'num_leaves': 2, 'max_depth': 2, 'n_estimators': 300}.log.json  logs_{'num_leaves': 2, 'max_depth': 2, 'n_estimators': 400}.log.json  logs_{'num_leaves': 2, 'max_depth': 3, 'n_estimators': 1000}.log.json  (+65 more)
(+5 files in other folders)
