[tool.poetry]
name = "bandits"
version = "0.1.0"
description = "bandits hybrid model for optimization"
authors = ["haoyanzhai <haoyanzhai@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pandas = "^2.2.1"
scikit-learn = "^1.4.1.post1"
scipy = "^1.12.0"
bayesian-optimization = "^1.4.3"
numpy = "^1.26.4"
xgboost = "^2.0.3"
